--- a/filmy1.html
+++ b/filmy1.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" content="Piotr">
     <link rel="stylesheet" href="style\filmy.css">
     <link rel="stylesheet" href="style\main.css">
