--- a/o_mnie.html
+++ b/o_mnie.html
@@ -5,7 +5,7 @@
 
     <meta name="autor" content="Piotr">
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style\omnie.css">
     <link rel="stylesheet" href="style\main.css">
     <title>omnie</title>
