--- a/Formulasz.html
+++ b/Formulasz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="strona do wysylania wiadomosci do autora">
     <meta name="autor" content="Piotr">
     <link rel="stylesheet" href="style\main.css">
     <link rel="stylesheet" href="style\formulasz.css">
