--- a/Sign_in.html
+++ b/Sign_in.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="strona do zarejestronawaionia sie">
     <meta name="autor" content="Piotr">
     <link rel="stylesheet" href="style\sign_in.css">
     <link rel="stylesheet" href="style\main.css">
