--- a/filmy1.html
+++ b/filmy1.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="autor" content="Piotr">
+        <meta name="description" content="fabula i recenzja shazama">
     <link rel="stylesheet" href="style\filmy.css">
     <link rel="stylesheet" href="style\main.css">
-    <title>film1</title>
+    <title>shazam</title>
 </head>
 <body class="dark_mode_m">
     <header class="dark_mode_hf" >
