--- a/filmy2.html
+++ b/filmy2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
    
     <meta name="autor" content="Piotr">
+        <meta name="description" content="recenzja i fabula fight cluba">
     <link rel="stylesheet" href="style\filmy.css">
     <link rel="stylesheet" href="style\main.css">
     <title>filmy2</title>
