--- a/filmy3.html
+++ b/filmy3.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
 
     <meta name="autor" content="Piotr">
+        <meta name="description" content="fabula i recenzja berserka">
     <link rel="stylesheet" href="style\filmy.css">
     <link rel="stylesheet" href="style\main.css">
-    <title>filmy3</title>
+    <title>berserk</title>
 </head>
 <body class="dark_mode_m">
     <header class="dark_mode_hf" >
