--- a/filmy4.html
+++ b/filmy4.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="autor" content="Piotr">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="fabula i recenzja fast and furious">
     <link rel="stylesheet" href="style\filmy.css">
     <link rel="stylesheet" href="style\main.css">
-    <title>filmy4</title>
+    <title>Fast and furious</title>
 </head>
 <body class="dark_mode_m">
     <header class="dark_mode_hf" >
