--- a/o_mnie.html
+++ b/o_mnie.html
@@ -6,6 +6,7 @@
     <meta name="autor" content="Piotr">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="informacje o mnie">
     <link rel="stylesheet" href="style\omnie.css">
     <link rel="stylesheet" href="style\main.css">
     <title>omnie</title>
