--- a/settings.html
+++ b/settings.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="autor" content="Piotr">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="ustawienia">
     <title>Settings</title>
     <link rel="stylesheet" href="style\main.css">
     <link rel="stylesheet" href="style\setting.css">
