--- a/tabela.html
+++ b/tabela.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="autor" content="Piotr">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="tabela gdzie porownywane sa filmy">
     <link rel="stylesheet" href="style\tabela.css">
     <link rel="stylesheet" href="style\main.css">
     <title>porownanie</title>
